--- a/R/p1_1_GAP_Feature_selection_07_02_2017.Rmd
+++ b/R/p1_1_GAP_Feature_selection_07_02_2017.Rmd
@@ -19,27 +19,17 @@ library(doMC)
 library(caret)
 library(plyr)
 library(dplyr)
-
+library(ggplot2)
 
 ```
 #Functions
 ```{r define functions, tidy=TRUE}
 
-cor_fun<- function(gene_exprs_DF,...) {
+cor_fun<- function(gene_exprs_DF,cor_cutoff=0.8) {
   # find highly correlated probes
   correlationMatrix <- cor(gene_exprs_DF)
   # find attributes that are highly corrected (ideally >0.75)
-  findCorrelation(correlationMatrix, cutoff=0.80)
-
-}
-
-
-rfe_fun<- function(rfe_df,...) {
-  # define the control using a random forest selection function
-  control <- rfeControl(functions=rfFuncs, method="cv", number=40,repeats=10)
-  # run the RFE algorithm
-  output <- rfe(rfe_df[,-1], rfe_df[,1], sizes=c(1:8), rfeControl=control)
-  output
+  findCorrelation(correlationMatrix, cutoff=cor_cutoff)
 
 }
 
@@ -58,10 +48,7 @@ P1_figs_dir <-"./P1_Hypothesis_Free/figs/"
 
 #Load Data
 ```{r Load data}
-
-
-load(file = paste(processed_data_dir,"pheno_data.RData",sep=""))
-load(file = paste(processed_data_dir,"exprs_data.RData",sep=""))
+load(paste(data_dir,"Train_and_Test_data.Rdata",sep=""))
 
 
 ```
@@ -78,51 +65,90 @@ set.seed(seed)
 ```
 
 
-##Split data
-```{r}
-
-Gap_Med_small<-GAP_Pheno_clean
-colnames(Gap_Med_small)[1]<-"CHIP_ID"
-Gap_Med_small$Phenotype<-as.factor(Gap_Med_small$Phenotype)
-
-exprs_data_small<-exprs(eset_bg_log2_rsn_SVA_Good)
-set.seed(seed)
-#Add phenotype to Gene expression. 
-GX_DF<-droplevels(merge(Gap_Med_small[,c("CHIP_ID","Phenotype")],t(exprs_data_small), by.x="CHIP_ID",by.y="row.names"))
-row.names(GX_DF)<-GX_DF[,1]
-GX_DF<-GX_DF[,-1]
-GX_DF[1:10,1:10]
-
-training_index <- createDataPartition(GX_DF$Phenotype, p = 0.8, list = F)
-
-training_df <- GX_DF[training_index,]
-testing_df <- GX_DF[-training_index,]
-
-```
-
 # Feature selection
 ```{r feature selection}
 
-#find highly correlated probes set to 90 by default.
-highlyCorrelated<-cor_fun(training_df[,-1])
-# remove highly correlated probes
-training_cor_df<-training_df[,-c(highlyCorrelated+1)]
+#Define number of columns not corresponding to Probes (HAVE TO BE AT THE START of data)
+Non_Probes=14 
 
+#make dataset of features that are not probes for backup and later use.
+training_df_np = training_df[,c(1:Non_Probes)]
+training_df = training_df[,-c(1,3:Non_Probes)]
+
+#find highly correlated probes set to 80 by default.
+highlyCorrelated<-cor_fun(training_df[,-c(1)],cor_cutoff=0.8)
+highlyCorrelated
+
+
+# remove highly correlated probes
+training_cor_df<-training_df[,-c(highlyCorrelated+Non_Probes)]
+
+#Check dimensions
+dim(training_df)
 dim(training_cor_df)
 
-control <- rfeControl(functions=rfFuncs, method="cv", number=40,repeats=10)
+############## Recursive Feature Elimnation ###################
+### Define Class Labels
+class_labels <- as.factor(training_cor_df[,1])
+
+### Normalise
+gx_predictors=training_cor_df[,-1]
+normalization <- preProcess(gx_predictors)
+gx_predictors <- predict(normalization, gx_predictors)
+gx_predictors <- as.data.frame(gx_predictors)
+# Select different subsets to calculate. 
+subsets <- c(50,100,150,200,250,300)
+
+
+#set seed
+set.seed(seed)
+#set control parameters 
+control <- rfeControl(functions=rfFuncs, #Random Forrest based
+                      method="repeatedcv", #Repeated CV
+                      number=10, #10 folds
+                      repeats=20, #10 repeats
+                      verbose = FALSE)
+
+
+
 # run the RFE algorithm
-output <- rfe(training_cor_df[,-1], training_cor_df[,1], sizes=c(1:8), rfeControl=control)
-results<-output
+rfe_output <- rfe(gx_predictors, class_labels, sizes=subsets, rfeControl=control)
+rfe_output_prepro<-rfe_output
+rfe_output <- rfe(training_cor_df[,-1], class_labels, sizes=subsets, rfeControl=control)
 
-
-#Run Random Forrest Feature selection
-rfe_results<-rfe_fun(training_cor_df)
-# list the chosen features
-rfepredictors<-predictors(results)
-
-#Gene Lists for LVQ and RFE
-save(rfepredictors,training_cor_df,testing_df,file=paste(P2_output_dir,"feature_selection_results_gap.Rdata",sep=""), compress = T)
+#Save output files
+save(rfe_output, rfe_output_prepro, file=paste(P1_output_dir,"Train_and_Test_data.Rdata",sep=""), compress = T)
 
 ```
+
+
+# Report of RFE results
+```{r feature selection report}
+
+# output
+rfe_output
+rfe_output_prepro
+
+
+
+
+# predictors
+rfepredictors<-predictors(rfe_output)
+rfepredictors_prepro<-predictors(rfe_output_prepro)
+
+
+# Save list of top predictors
+write.table(rfepredictors, file=paste(P1_output_dir,"rfe_predictors.csv",sep=""),row.names=F,quote=FALSE,sep = ",")
+write.table(rfepredictors_prepro, file=paste(P1_output_dir,"rfe_predictors_prepro.csv",sep=""),row.names=F,quote=FALSE,sep = ",")
+
+# save Plot of different predictor sizes and accuracy.
+jpeg(paste(P1_figs_dir,"RFE_SC.jpg"))
+plot(rfe_output_prepro, type = c("l"),col="red", main="Recursive Feature Elimination (Scaled / Centered)")
+dev.off()
+jpeg(paste(P1_figs_dir,"RFE.jpg"))
+plot(rfe_output, type = c("g", "o"),col="green",main="Recursive Feature Elimination")
+dev.off()
+```
+
+
 
