Polygenic risk scores added to readme. Needs to be added to workflow.

--- a/R/p1_1_GAP_Feature_selection_07_02_2017.Rmd
+++ b/R/p1_1_GAP_Feature_selection_07_02_2017.Rmd
@@ -100,6 +100,7 @@ gx_predictors <- as.data.frame(gx_predictors)
 subsets <- c(50,100,150,200,250,300)
 
 
+?rfFuncs
 #set seed
 set.seed(seed)
 #set control parameters 
