--- a/R/p0_Split_Data_GAP_FEP_data_07_02_2017.Rmd
+++ b/R/p0_Split_Data_GAP_FEP_data_07_02_2017.Rmd
@@ -39,8 +39,10 @@ P0_figs_dir <-"./P0_Characterise/figs/"
 #Functions
 ```{r define functions, tidy=TRUE}
 
+?CreateTableOne
+
 table_fun<- function(mldata,split,prs_col=prs_col){
-  listVars <- c("Gender","Age", "Ethnicity","BMI","Tobacco",names(mldata)[65:73])
+  listVars <- c("Gender","Age", "Ethnicity","BMI","Tobacco",names(mldata)[prs_col])
   catVars <- c("Ethnicity","Tobacco")
   table1 <- CreateTableOne(vars = listVars, data = mldata, factorVars = catVars,strata=c("Phenotype"),includeNA = T)
   table1print<-print(table1)
@@ -105,13 +107,11 @@ training_index <- createDataPartition(GX_DF$Phenotype, p = 0.70, list = F)
 training_df <- GX_DF[training_index,]
 testing_df <- GX_DF[-training_index,]
 
-
-
 #Make tables
 split="testing_df"
-table_fun(testing_df,split,prs_col=(21:26))
+table_fun(testing_df,split,prs_col=(18:26))
 split="training_df"
-table_fun(training_df,split,prs_col=(21:26))
+table_fun(training_df,split,prs_col=(18:26))
 
 
 #Save results
