Comment in ML Script to make it easier to read. Created Tunig barebones script.

--- a/R/p1_2_GAP_Machine_learning_07_02_2017.Rmd
+++ b/R/p1_2_GAP_Machine_learning_07_02_2017.Rmd
@@ -110,6 +110,7 @@ control <- trainControl(method="repeatedcv", number=10, repeats=10, sampling="do
 #Define Metric to choose best model
 metric <- "Accuracy"
 
+#Names of all predictors to be used. 
 opt_rfepredictors<-predictors(rfe_output)
 
 
