--- a/R/p1_3_GAP_Tuning_07_02_2017.Rmd
+++ b/R/p1_3_GAP_Tuning_07_02_2017.Rmd
@@ -73,16 +73,18 @@ load(file=paste(P1_output_dir,"RFE_model_results_hypothesis_free_data.Rdata",sep
 ```{r Define Cores and Seed}
 
 #Allow 8 Cores
-registerDoMC(cores = 8) 
+registerDoMC(cores = 8) # Note that there might be minor issues with reproducibility due to the cores that are used. 
 #Set Seed
 seed = 7
 set.seed(seed)
 
-#Control for algorithms
-#control <- trainControl(method="repeatedcv", number=10, repeats=10, sampling="down", savePredictions="all", search="grid") 
+###### Control for algorithms #########
+# Random Forrest
 rfcontrol <- trainControl(method="repeatedcv", number=10, repeats=3, sampling="down", savePredictions="all")
 rftunegrid <- expand.grid(.mtry=c(1:15), .ntree=c(1000, 1500, 2000, 2500))
-set.seed(seed)
+rftunegrid <- expand.grid(.mtry=c(1:30))
+# GBM
+GBMcontrol <- trainControl(method="repeatedcv", number=10, repeats=3, sampling="down", savePredictions="all")
 
 
 #Define Metric to choose best model
@@ -94,7 +96,7 @@ opt_rfepredictors<-predictors(rfe_output)
 
 #input data frame
 expressionRFE<-training_df[,c("Phenotype",opt_rfepredictors)]
-
+#expressionRFE<-training_df[,c("Phenotype",opt_rfepredictors[1:50])]
 
 
 ```
@@ -117,9 +119,52 @@ customRF$sort <- function(x) x[order(x[,1]),]
 customRF$levels <- function(x) x$classes
 customRF
 
-RF_custom_search <- train(Phenotype~., data=expressionRFE, method=customRF, metric=metric, tuneGrid=rftunegrid, trControl=rfcontrol)
-summary(RF_custom_search)
-plot(RF_custom_search)
+#Run Parameter Search.
+set.seed(seed)
+RF_custom_search <- train(Phenotype~., data=expressionRFE, method=customRF, metric=metric, tuneGrid=rftunegrid, trControl=rfcontrol) 
+RF_custom_search_test <- train(Phenotype~., data=expressionRFE, method="rf", metric=metric, tuneGrid=rftunegrid, trControl=rfcontrol) 
+#takes around 15 minutes with 8 cores and 60 runs at 30 x cross validation. 
 
-#13.07
+#Summary and Plot. 
+RF_custom_search_test
+str(RF_custom_search_test)
+plot(RF_custom_search_test)
+trellis.par.set(caretTheme())
+plot(RF_custom_search_test)  
 ```
+
+#Stochastic Gradient Boosting, Parameter Search
+```{r GBM Parameter Search}
+
+#tuning grid GBM
+gbmGrid <-  expand.grid(interaction.depth = c(1, 5, 9), n.trees = (1:30)*50, shrinkage = 0.1, n.minobsinnode = 20)
+
+#Set seed and run model
+set.seed(seed)
+gbmFit1 <- train(Phenotype ~ ., data = expressionRFE, method = "gbm",trControl = GBMcontrol, verbose = FALSE,tuneGrid = gbmGrid)
+gbmFit1
+
+trellis.par.set(caretTheme())
+plot(gbmFit1)  
+trellis.par.set(caretTheme())
+plot(gbmFit1, metric = "Kappa")
+
+whichTwoPct <- tolerance(gbmFit1$results, metric = metric, tol = 2, maximize = TRUE)  
+gbmFit1$results[whichTwoPct,1:6]
+
+predict(gbmFit1, newdata = head(testing))
+
+
+trellis.par.set(caretTheme())
+plot(gbmFit1, metric = "Kappa", plotType = "level",
+     scales = list(x = list(rot = 90)))
+
+```
+
+
+#SVM Poly, Parameter Search
+```{r SVMpoly Parameter Search}
+
+
+```
+
